edit site-wrap breakpoint. z-index fixes, some tweaks

--- a/src/assets/scss/50-components/_configurator.scss
+++ b/src/assets/scss/50-components/_configurator.scss
@@ -1,3 +1,5 @@
 .c-configurator {
 	margin-bottom: 4rem;
+	position: relative;
+	z-index: 10;
 }
