--- a/src/assets/scss/50-components/_progress.scss
+++ b/src/assets/scss/50-components/_progress.scss
@@ -1,8 +1,8 @@
 .c-progress {
   position: relative;
-  z-index: 10;
+  z-index: 20;
 }
 
-.c-progress_inner {
+.c-progress-nav {
   padding-bottom: 1rem;
 }
