--- a/src/assets/scss/50-components/_section.scss
+++ b/src/assets/scss/50-components/_section.scss
@@ -2,7 +2,7 @@
   //   border: 1px solid;
   &.-first {
     // min-height: 100vh;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
   }
 }
