--- a/src/assets/scss/50-components/_site-main.scss
+++ b/src/assets/scss/50-components/_site-main.scss
@@ -2,9 +2,9 @@
   // margin-top: 2rem;
 }
 
-@media (orientation: landscape) and (max-width: $to-medium) {
+@media (max-width: $to-medium) {
   .c-site-main {
-    max-width: 60%;
+    max-width: 414px;
     margin-left: auto;
     margin-right: auto;
   }
